Colocando imagem de fundo

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/assets/BACKGROUND.png);
+  background-image: url(../assets/BACKGROUND.png);
   background-size: cover;
   font-family: "Questrial";
 }
