--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/assets/BACKGROUND.svg);
+    background-image: url(../assets/BACKGROUND.png);
     background-size: cover;
     font-family: "Questrial";
   }
