--- a/src/components/Forms/forms.css
+++ b/src/components/Forms/forms.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
 .card {
-  align-items: center;
-  font-size: 25px;
-  font-weight: 400;
-  width: 350px;
 }
 
 .input {
@@ -49,5 +45,10 @@
 @media (min-width: 780px) {
   .card{
     width: 40rem;
+    margin-top: 200px;
+  }
+
+  .row{
+    margin-top: 5rem;
   }
 }
