Criando outros componentes

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
-body {
-  background-image: url(/src/assets/BACKGROUND.png);
-  background-size: cover;
+* {
   font-family: "Questrial";
 }
